<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/home"
		android:icon="@drawable/house_item_navigation_selector"
		android:title="@string/home" />

	<item
		android:id="@+id/stats"
		android:icon="@drawable/statistic_navigation_item_selector"
		android:title="@string/stats" />

	<item
		android:id="@+id/prediction"
		android:icon="@drawable/prediction_navigation_item_selector"
		android:title="@string/prediction" />

</menu>